Fixed minor spacing

--- a/src/app/components/theorems-list/theorems-list.component.scss
+++ b/src/app/components/theorems-list/theorems-list.component.scss
@@ -1,7 +1,7 @@
 .theoremsContainer {
   position: fixed;
   bottom: 10px;
-  top: 130px; // was 110px but made the proofs overlap with the button
+  top: 110px; // was 110px but made the proofs overlap with the button
   overflow: auto;
   overflow-y: scroll;
   width: 39%;
